--- a/composer.json
+++ b/composer.json
@@ -1,19 +1,23 @@
 {
-    "name": "bcedric/docapost",
-    "autoload": {
-        "psr-4": {
-            "Bcedric\\Docapost\\": "src/"
-        }
-    },
-    "authors": [
-        {
-            "name": "Cedbois",
-            "email": "cedric.bois@uca.fr"
-        }
-    ],
-    "require": {
-        "symfony/serializer": "^7.1",
-        "symfony/http-client": "^7.1",
-        "symfony/mime": "^7.1"
+  "name": "bcedric/docapost",
+  "autoload": {
+    "psr-4": {
+      "Bcedric\\Docapost\\": "src/"
     }
+  },
+  "authors": [
+    {
+      "name": "Cedbois",
+      "email": "cedric.bois@uca.fr"
+    }
+  ],
+  "require": {
+    "php": ">=7.2.5",
+    "symfony/serializer": "^6.0 | ^7.0",
+    "symfony/http-client": "^6.0 | ^7.0",
+    "symfony/mime": "^6.0 | ^7.0",
+    "symfony/config": "^6.0 | ^7.0",
+    "symfony/dependency-injection": "^6.0 | ^7.0",
+    "symfony/http-kernel": "^6.0 | ^7.0"
+  }
 }
