--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
   "name": "bcedric/docapost",
   "autoload": {
-    "psr-0": {
-      "BCedric\\DocapostBundle": ""
+    "psr-4": {
+      "BCedric\\DocapostBundle": "src/"
     }
   },
   "authors": [
@@ -13,12 +13,11 @@
   ],
   "require": {
     "php": ">=7.2.5",
-    "symfony/serializer": "^6.0|^7.0",
-    "symfony/http-client": "^6.0|^7.0",
-    "symfony/mime": "^6.0|^7.0",
-    "symfony/config": "^6.0|^7.0",
-    "symfony/dependency-injection": "^6.0|^7.0",
-    "symfony/http-kernel": "^6.0|^7.0"
-  },
-  "target-dir": "BCedric/DocapostBundle"
+    "symfony/serializer": ">=6.0",
+    "symfony/http-client": ">=6.0",
+    "symfony/mime": ">=6.0",
+    "symfony/config": ">=6.0",
+    "symfony/dependency-injection": ">=6.0",
+    "symfony/http-kernel": ">=6.0"
+  }
 }
