--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "symfony/mime": ">=6.0",
     "symfony/config": ">=6.0",
     "symfony/dependency-injection": ">=6.0",
-    "symfony/http-kernel": ">=6.0"
+    "symfony/http-kernel": ">=6.0",
+    "symfony/orm-pack": "^2.4"
   }
 }
