--- a/config/services.yaml
+++ b/config/services.yaml
@@ -8,7 +8,7 @@ services:
     resource: "../src/*"
     exclude: "../src/{Entity,Migrations,Tests,Kernel.php}"
 
-  BCedric\DocapostBundle\Controller\DocapostAPIController:
+  BCedric\DocapostBundle\Controller\DocapostController:
       public: true
       autowire: true
       autoconfigure: true
